adl-frontend/src/test/resources/unit/error/semantic/attributes/attr85.adl
//#SemanticError GroupId=MADL ErrorId=INCOMPATIBLE_ARGUMENT_VALUE line=5
//#SemanticError GroupId=MADL ErrorId=INVALID_ATTRIBUTE_VALUE_INCOMPATIBLE_TYPE line=5
// argument: integer assigned to string
primitive attributes.attr85 extends attr83("toto",
 "titi") {}
